<resources>
    <string name="app_name">GameSact</string>
    <string name="app_logo">App Logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="gamesact">GameSact</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="new_user_sign_up_here">New user? Sign up here.</string>
    <string name="forgot_password_reset_here">Forgot password? Reset here.</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user_log_in_here">Already a user? Log in here.</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="loading">Loading...</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ashish_email">tashish32@gmail.com</string>
    <string name="image_of_ribbon">Image of ribbon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="dummy_phone_number">9848012345</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="change_password">Change Password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="current_password">Current password</string>
    <string name="back_arrow">back arrow</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="phone_number">Phone number</string>
    <string name="ashish_tamang">Ashish Tamang</string>
    <string name="reset_password">Reset Password</string>
    <string name="game_image">Game Image</string>
    <string name="fortnite">Fortnite</string>
    <string name="game_name">Game Name</string>
    <string name="buy_fortnite_v_bucks">Buy Fortnite V-bucks</string>
    <string name="_100_uc">100 UC</string>
    <string name="enter_your_gamer_tag">Enter your gamer tag</string>
    <string name="cancel">cancel</string>
    <string name="purchase">Purchase</string>
    <string name="you_are_purchasing_100_v_bucks_for_nrs_200">You are purchasing 100 V-bucks for NRS 200.</string>
    <string name="esewa">esewa</string>
    <string name="ashish31">ashish31</string>
    <string name="fortnite_200_v_bucks">Fortnite 200 V Bucks</string>
    <string name="rs_500">Rs. 500</string>
    <string name="order_processing">Order: Processing</string>
    <string name="orders">Orders</string>
</resources>