<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyWhite"
    tools:context=".purchaseManagement.PurchaseActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView_purchase"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/game_image"
                app:srcCompat="@drawable/fortnite" />

            <TextView
                android:id="@+id/purchase_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:fontFamily="@font/montserrat"
                android:text="@string/you_are_purchasing_100_v_bucks_for_nrs_200"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gamer_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/enter_your_gamer_tag"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/red"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_tag"
                app:startIconTint="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_bold"
                android:text="Purchase options"
                android:padding="10dp"/>

            <ImageButton
                android:id="@+id/purchase_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:contentDescription="@string/esewa"
                android:onClick="initiatePurchase"
                android:padding="10dp"
                android:src="@drawable/esewa_logo"
                android:text="@string/purchase"
                android:textColor="@color/red"
                android:textSize="18sp"
                app:strokeColor="@color/red"
                app:strokeWidth="2dp" />


            <Button
                android:id="@+id/cancel_purchase_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"
                android:onClick="cancel"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>