<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userManagement.EditProfileActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            android:contentDescription="@string/back_arrow"
            android:onClick="exitActivity"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>

    <!--  Line Seperator (toddles_fp | Jan 26 '13) -->
    <!--  https://stackoverflow.com/questions/5049852/android-drawing-separator-divider-line-in-layout  -->
    <View
        style="@style/Divider"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/name"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/red"
            app:boxStrokeWidth="2dp"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/red"
            app:boxStrokeWidth="2dp"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/red"
            app:boxStrokeWidth="2dp"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/edit_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:onClick="saveChanges"
            android:padding="10dp"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:elevation="2dp"
            app:strokeColor="@color/red" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>