<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".purchaseManagement.GamesDetailActivity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/back_arrow"
                    android:onClick="exitActivity"
                    app:srcCompat="@drawable/ic_back_arrow" />

                <TextView
                    android:id="@+id/detail_game_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/game_name"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/detail_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/game_image"
                app:srcCompat="@drawable/fortnite" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:padding="10dp"
                android:text="@string/buy_fortnite_v_bucks"
                android:textColor="@color/red"
                android:textSize="22sp"
                android:textStyle="bold"
                android:shadowColor="#686868"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="5"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_prices_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"/>


        </LinearLayout>
</androidx.core.widget.NestedScrollView>